--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "my-project",
+  "name": "omeda",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "preline": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.19.0",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
